# ipatool-py

./: .gitignore  pyproject.toml  setup_test.py
ipatool/: main.py
ipatool/reqs/: itunes.py  store.py
