[project]
name = "ipatool"
version = "1.0"
authors = [
  { name="NyaMisty", email="nyamisty@users.noreply.github.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
